--- a/pallets/rng_dao_pallet/Cargo.toml
+++ b/pallets/rng_dao_pallet/Cargo.toml
@@ -37,5 +37,8 @@ std = [
 	"scale-info/std",
 	"pallet-balances/std",
 ]
-runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
+runtime-benchmarks = [
+	"frame-benchmarking/runtime-benchmarks",
+	"frame-system/runtime-benchmarks",
+]
 try-runtime = ["frame-support/try-runtime"]
