Add pallet rng_dao to runtime and make it compile with runtime-benchmarks feature

--- a/pallets/rng_dao_pallet/Cargo.toml
+++ b/pallets/rng_dao_pallet/Cargo.toml
@@ -23,6 +23,7 @@ pallet-balances = { version = "4.0.0-dev", default-features = false, git = "http
 frame-system = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", " branch" = "polkadot-v0.9.35" }
 sp-runtime = { version = "7.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", " branch" = "polkadot-v0.9.35" }
 sp-core = { version = "7.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", " branch" = "polkadot-v0.9.35" }
+sp-std = { version = "5.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", " branch" = "polkadot-v0.9.35" }
 
 [dev-dependencies]
 sp-io = { version = "7.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", " branch" = "polkadot-v0.9.35" }
